# rba-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: rba-mcp-expert.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  test.yml
examples/: claude_desktop_config.json  claude_desktop_config_both.json
src/rba_mcp/: __init__.py  cache.py  client.py  curated.py  models.py  parsing.py  release_calendar.py  server.py  shaping.py  tables.py
src/rba_mcp/data/: tables.yaml
src/rba_mcp/data/curated/: C1.yaml  D1.yaml  D2.yaml  E2.yaml  F1.yaml  F11.yaml  F11_1.yaml  F1_1.yaml  F2.yaml  F2_1.yaml  F4.yaml  F5.yaml  F6.yaml  F7.yaml  F8.yaml  G3.yaml
tests/: conftest.py  test_cache.py  test_client.py  test_curated.py  test_integration.py  test_mcp_protocol.py  test_parsing.py  test_release_calendar.py  test_resilience.py  test_server_validation.py  test_shaping.py  test_stress_regressions.py  test_tables.py
tests/fixtures/: f1.1-data.csv  f11-data.csv  f11.1-data.csv  f4-data.csv  f6-data.csv  rba_sched.html
