[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rba-mcp"
version = "0.1.2"
description = "MCP server for the Reserve Bank of Australia statistical tables (F-tables). Plain-English access to interest rates, FX rates, deposit/lending rates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harry Vass" }]
keywords = ["mcp", "rba", "australia", "interest-rates", "fx", "claude", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "pandas>=2.2,<3",
    "aiosqlite>=0.20",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
rba-mcp = "rba_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Bigred97/rba-mcp"
Issues = "https://github.com/Bigred97/rba-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rba_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits the real RBA CDN"]
addopts = "-m 'not live'"
testpaths = ["tests"]
pythonpath = ["src"]
