[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rba-mcp"
version = "0.8.0"
description = "MCP server for the Reserve Bank of Australia statistical tables (F-tables). Plain-English access to interest rates, FX rates, deposit/lending rates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harry Vass" }]
keywords = [
    "mcp", "model-context-protocol", "claude", "fastmcp",
    "rba", "reserve-bank-of-australia", "cash-rate", "interest-rates", "fx", "exchange-rates",
    "australia", "australian", "public-data", "government-data",
    "economy", "monetary-policy", "data-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "pandas>=2.2,<3",
    "aiosqlite>=0.20",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
rba-mcp = "rba_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Bigred97/rba-mcp"
Documentation = "https://github.com/Bigred97/rba-mcp#readme"
Repository = "https://github.com/Bigred97/rba-mcp"
Issues = "https://github.com/Bigred97/rba-mcp/issues"
Changelog = "https://github.com/Bigred97/rba-mcp/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/rba-mcp/"

[tool.hatch.build.targets.wheel]
packages = ["src/rba_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits the real RBA CDN"]
addopts = "-m 'not live'"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "F841", "F401"]
